--- a/PhaseSpace/Heatmap_Plots.ipynb
+++ b/PhaseSpace/Heatmap_Plots.ipynb
@@ -42,7 +42,7 @@
     "data[\"w0_2\"] = {}\n",
     "\n",
     "for freq in frequencies:\n",
-    "    PATH = \"/gpfs/data/fs72150/springerd/Projects/DynamicalU/PhaseSpace/Ust_vs_Usc/beta20/\"+freq\n",
+    "    PATH = \"/gpfs/data/fs72150/springerd/Projects/DynamicalU/PhaseSpace/Ust_vs_Usc/beta20/Bethe/\"+freq\n",
     "#     print(PATH)\n",
     "    U_st = []\n",
     "    U_sc = []\n",
@@ -5535,7 +5535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
